--- a/translations/messages.uk.yaml
+++ b/translations/messages.uk.yaml
@@ -12,3 +12,6 @@ attribute:
     !php/const App\Entity\Attribute::TYPE_LIST: Список
 
 Attributes : Атрибуты
+
+Value : Значение
+Attribute : Атрибут
